# clear-stage

./: .gitignore  .gitmodules  pyproject.toml  requirements.txt  setup.sh
clear_stage/: auto_select.py  chunk_video.py  cli.py  detect_people.py  generate_points_config.py  resolution.py  run_pipeline.py  runpod_runner.py  segment_people.py  select_principal.py  stitch_chunks.py
docs/plans/: 2026-04-08-pole-dancer-background-removal.md  2026-04-09-clear-stage-v2-quality-and-automation.md
docs/specs/: 2026-04-08-pole-dancer-background-removal-design.md
tests/: test_chunk_video.py  test_generate_config.py  test_resolution.py
