[project]
name = "clear-stage"
version = "0.2.0"
description = "Remove background dancers from pole dance studio videos"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "numpy",
    "torch",
    "Pillow",
]

[project.optional-dependencies]
gpu = [
    "groundingdino-py",
    "google-generativeai",
]
remote = [
    "runpod",
]

[project.scripts]
clear-stage = "clear_stage.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
